--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@
   text-align: center;
 }
 .margin_bottom{
-  margin-bottom: 10px;
+  margin: 30px 0;
 }
-
+.grey{
+  background-color: #EEE8E8;
+}
 img{
   height:200px;
 }
