--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 .grey{
   background-color: #EEE8E8;
 }
+
 img{
   height:200px;
 }
@@ -14,5 +15,10 @@ img{
 @media screen and (min-width:768px) and (max-width:992px){
   img{
     height: 150px;
+  }
+}
+@media screen and (max-width:768px){
+  img{
+    height: 100px;
   }
 }
